--- a/src/competitions/CompetitionListing/styles.scss
+++ b/src/competitions/CompetitionListing/styles.scss
@@ -1,6 +1,15 @@
 .container {
-  margin-top: 24px;
+  margin-top: 10px;
   margin-bottom: 48px;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-right: 40px;
+  padding-left: 40px;
+  @media screen and (max-width: 600px) {
+    padding-right: 0;
+    padding-left: 0;
+  }
 }
 
 .competitionCardContainer {
