--- a/src/competitions/CompetitionSingle/styles.scss
+++ b/src/competitions/CompetitionSingle/styles.scss
@@ -10,10 +10,13 @@
 .container {
   max-width: 800px;
   width: 100vw;
-  padding: 8px;
   >div {
     @media screen and (min-width: 700px) {
       padding: 24px;
+    }
+
+    @media screen and (max-width: 700px) {
+      padding: 16px;
     }
   }
 }
@@ -101,13 +104,17 @@
 .postCardWrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
 }
 
 .postCardContainer {
   width: 100%;
-  max-width: 360px;
+  box-sizing: border-box;
+  //max-width: 360px;
   >div {
-    border: 2px solid rgba(0, 0, 0, 0.12);
+    border: 1px solid rgba(0, 0, 0, 0.12);
+    @media screen and (max-width: 600px) {
+      margin-left: -17px;
+    }
   }
 }
