--- a/src/feed/styles.scss
+++ b/src/feed/styles.scss
@@ -33,3 +33,12 @@
     }
 
 }
+
+.feedContainer {
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  @media screen and (max-width: 600px) {
+    margin-left: -16px;
+  }
+}
