--- a/src/post/PostSingle/styles.scss
+++ b/src/post/PostSingle/styles.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables.scss";
+
 .postSingleContainer {
   max-width: 800px;
   width: 100vw;
@@ -13,4 +15,12 @@
   padding: 24px;
   display: flex;
   flex-wrap: wrap;
+}
+
+.postTitle {
+  font-size: 36px;
+  font-weight: 400;
+  line-height: 54px;
+  padding: 8px 24px 18px 24px;
+  color: $primary-color;
 }
