Add micro community listing and single display with posts

--- a/src/feed/styles.scss
+++ b/src/feed/styles.scss
@@ -42,3 +42,10 @@
     margin-left: -16px;
   }
 }
+
+.widgetContainer {
+  max-width: 245px;
+  @media screen and (max-width: 1296px) {
+    display: none;
+  }
+}
