Add communities to user profile

--- a/src/post/PostUserMeta/styles.scss
+++ b/src/post/PostUserMeta/styles.scss
@@ -13,6 +13,8 @@
 .userImage {
   width: 48px;
   height: 48px;
+  min-width: 48px;
+  min-height: 48px;
   background-position: center;
   background-size: cover;
   border-radius: 100%;
