Make community related components responsive

--- a/src/feed/styles.scss
+++ b/src/feed/styles.scss
@@ -4,6 +4,7 @@
 
 .feedPosts {
     width: 600px;
+    margin-top: 10px;
 
     @media screen and (max-width: 985px) {
         margin-top: 160px !important
