--- a/src/profile/UserCoverContainer/styles.scss
+++ b/src/profile/UserCoverContainer/styles.scss
@@ -4,7 +4,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-size: cover;
-  width: 100vw;
+  width: 100%;
 }
 
 .profileImage {
