--- a/src/microCommunities/Widget/styles.scss
+++ b/src/microCommunities/Widget/styles.scss
@@ -4,6 +4,9 @@
   padding: 24px;
   background: white;
   color: rgba(0, 0, 0, 0.54);
+  position: fixed;
+  width: 245px;
+  box-sizing: border-box;
 }
 
 .title {
