Add feature to display rankings for competitions where results are already declared

--- a/src/post/PostCard/styles.scss
+++ b/src/post/PostCard/styles.scss
@@ -54,3 +54,13 @@
 	background-color: $primary-color;
 	color: white;
 }
+
+.prizeContainer {
+  padding: 16px 32px 0;
+  >*:not(:last-child) {
+    margin-right: 8px;
+  }
+  .rank {
+    color: $primary-color;
+  }
+}
