Use Steemit related JS for proper rendering of posts

--- a/src/profile/UserCoverContainer/styles.scss
+++ b/src/profile/UserCoverContainer/styles.scss
@@ -20,7 +20,7 @@
 .coverPlaceholder {
   background-color: rgba(63, 114, 175, 0.11);
   height: 48px;
-  width: 100vw;
+  width: 100%;
   min-height: 176px;
   color: rgba(0, 0, 0, 0.11);
   display: flex;
