--- a/src/post/Replies/Reply/styles.scss
+++ b/src/post/Replies/Reply/styles.scss
@@ -29,7 +29,8 @@
 	font-size: 16px;
 	line-height: 20px;
   margin: 8px 0 8px 40px;
-	color: rgba(0, 0, 0, 0.54);
+  color: rgba(0, 0, 0, 0.54);
+  overflow: auto;
 }
 
 .replyBody p {
