Add participate button for competition

--- a/src/competitions/CompetitionSingle/styles.scss
+++ b/src/competitions/CompetitionSingle/styles.scss
@@ -1,5 +1,10 @@
 @import '../../styles/variables';
 
+.participateButton {
+  width: 120px;
+  padding-bottom: 0;
+}
+
 .wrapper {
   display: flex;
   align-items: center;
