Add rating display modal

--- a/src/post/PostBody/styles.scss
+++ b/src/post/PostBody/styles.scss
@@ -1,6 +1,7 @@
 @import "../../styles/_variables.scss";
 
 .container {
+  overflow-x: hidden;
   padding: 0 24px;
   a {
     color: $primary-color;
