--- a/src/post/create/CreateArticle/MarkdownEditor/styles.scss
+++ b/src/post/create/CreateArticle/MarkdownEditor/styles.scss
@@ -13,4 +13,13 @@
       padding: 10px;
     }
   }
+  .imageUploadContainer {
+    display: flex;
+    align-items: baseline;
+    .uploadingText {
+      font-size: 12px;
+      color: rgb(102, 102, 102);
+      margin-left: 8px;
+    }
+  }
 }
