--- a/src/post/create/CreateArticle/MarkdownEditor/styles.scss
+++ b/src/post/create/CreateArticle/MarkdownEditor/styles.scss
@@ -12,6 +12,10 @@
       min-height: 132px;
       padding: 10px;
     }
+    .previewBody.noBorder {
+      outline: none;
+      border: none;
+    }
   }
   .imageUploadContainer {
     display: flex;
@@ -21,5 +25,9 @@
       color: rgb(102, 102, 102);
       margin-left: 8px;
     }
+  }
+  .noBorder, .noBorder:hover, .noBorder:focus {
+    outline: none;
+    border: none;
   }
 }
