--- a/src/post/PostBody/styles.scss
+++ b/src/post/PostBody/styles.scss
@@ -14,17 +14,10 @@
   line-height: 24px;
 }
 
-.bodyContainer h1 {
-  font-weight: medium;
-  font-size: 36px;
-  color: $primary-color;
-  line-height: 54px;
-}
-
-.bodyContainer h2 {
-  font-size: 18px;
-  color: $primary-color;
-  line-height: 30px;
+.bodyContainer {
+  h1, h2, h3, h4, h5, h6 {
+    color: $primary-color;
+  }
 }
 
 .articleReadMore {
