Add sign in button component

--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -54,7 +54,7 @@
   -webkit-border-radius: 30px;
   -moz-border-radius: 30px;
   border-radius: 30px;
-  padding: 0 20px;
+  padding: 0 20px !important;
   background-color: white;
   color: $primary-color;
 }
