Prevent modal container to load for every post

--- a/src/onboard/pages/styles.scss
+++ b/src/onboard/pages/styles.scss
@@ -4,7 +4,7 @@
   .title {
     font-size: 40px;
     color: $primary-color;
-    margin-top: 90px;
+    padding-top: 90px;
   }
   .signInButton {
     border-radius: 0;
