--- a/src/onboard/pages/styles.scss
+++ b/src/onboard/pages/styles.scss
@@ -33,6 +33,10 @@
   }
   .left {
     background: #fcfdff;
+    @media screen and (max-width: 800px) {
+      width: 95%;
+      display: none;
+    }
   }
   .right {
     padding: 48px;
@@ -44,5 +48,10 @@
     .body {
       color: rgba(0, 0, 0, 0.7);
     }
+
+    @media screen and (max-width: 800px) {
+      width: 100%;
+    }
+
   }
 }
