--- a/src/competitions/Leaderboard/styles.scss
+++ b/src/competitions/Leaderboard/styles.scss
@@ -81,6 +81,13 @@ $breakpoint-2: 660px;
     font-size: 16px;
     background: white;
     margin-bottom: 8px;
+    position: relative;
+
+    .closeBtn {
+      position: absolute;
+      right: 32px;
+      top: 32px;
+    }
   }
 
   .winnerCard {
@@ -130,7 +137,8 @@ $breakpoint-2: 660px;
       padding-left: 22%;
       .entry {
         margin-right: 16px;
-
+        align-items: center;
+        line-height: 2.5;
         .medal {
           min-height: 40px;
         }
