--- a/src/competitions/Leaderboard/styles.scss
+++ b/src/competitions/Leaderboard/styles.scss
@@ -65,9 +65,12 @@ $breakpoint-2: 660px;
 }
 
 .winnerListWrapper {
-  min-width: 600px;
   background-color: white;
   box-sizing: border-box;
+  min-width: 97vw;
+  @media screen and (min-width: 600px) {
+    min-width: 600px;
+  }
 
   .scrollbar {
     >div {
@@ -104,15 +107,27 @@ $breakpoint-2: 660px;
 
 
     .cardMeta {
-      margin-bottom: 8px;
+      margin-bottom: 16px;
       display: flex;
       justify-content: space-between;
+      align-items: center;
+
+
+      @media screen and (max-width: 600px) {
+        font-size: 16px;
+        flex-basis: 10%;
+      }
 
       .rank {
         color: $primary-color;
         margin-right: 8px;
         font-size: 20px;
         flex-basis: 20%;
+
+        @media screen and (max-width: 600px) {
+          font-size: 16px;
+          flex-basis: 10%;
+        }
       }
 
       .score {
@@ -124,7 +139,6 @@ $breakpoint-2: 660px;
     .userInfo {
       display: flex;
       align-items: center;
-      margin-bottom: 16px;
       flex-basis: 60%;
 
       a:not(.usernameLink) {
