--- a/src/post/create/CreatePost/CommunitySelector/styles.scss
+++ b/src/post/create/CreatePost/CommunitySelector/styles.scss
@@ -31,7 +31,7 @@
 }
 
 .communitySelected {
-  background-color: $primary-color;
+  background-color: $primary-color !important;
   color: white;
   transition: all ease-out 0.3s;
 }
