--- a/src/post/create/CreateArticle/ArticleNext/TagsSelector/styles.scss
+++ b/src/post/create/CreateArticle/ArticleNext/TagsSelector/styles.scss
@@ -7,6 +7,8 @@
   background-color: $background-color;
   border-radius: 21px;
   cursor: pointer;
+  display: flex;
+  align-items: center;
 }
 
 .cancelButton {
