--- a/src/competitions/create/newCompetition/styles.scss
+++ b/src/competitions/create/newCompetition/styles.scss
@@ -8,11 +8,12 @@
   right: 0;
   display: flex;
   justify-content: flex-end;
+  border-top: 1px solid rgba(0, 0, 0, 0.06);
   .button {
     padding: 8px 24px;
     margin-left: 16px;
   }
-  padding: 24px;
+  padding: 16px 24px;
 }
 
 .header {
