--- a/src/post/create/CreateArticle/Editor/styles.scss
+++ b/src/post/create/CreateArticle/Editor/styles.scss
@@ -12,6 +12,7 @@
   overflow: inherit;
   border: 0 !important;
   margin-bottom: 0;
+  max-width: 800px;
 
   @media screen and (max-width: 530px) {
     justify-content: center !important;
