--- a/src/post/PostSingle/styles.scss
+++ b/src/post/PostSingle/styles.scss
@@ -22,5 +22,5 @@
   font-weight: 400;
   line-height: 54px;
   padding: 8px 24px 18px 24px;
-  color: $primary-color;
+  color: rgba(0, 0, 0, 0.87);
 }
