--- a/src/post/PostBody/styles.scss
+++ b/src/post/PostBody/styles.scss
@@ -9,9 +9,9 @@
 }
 
 .bodyContainer {
-  font-size: 16px;
-  color: rgba(0,0,0,0.54);
-  line-height: 24px;
+  font-size: 18px;
+  color: rgba(0,0,0,0.70);
+  line-height: 1.5;
 }
 
 .bodyContainer {
