--- a/src/onboard/pages/styles.scss
+++ b/src/onboard/pages/styles.scss
@@ -20,6 +20,16 @@
       color: $primary-color;
     }
   }
+  .questionMark {
+    padding: 4px 10px;
+    margin-left: 8px;
+    border-radius: 50%;
+    background: rgba(216, 216, 216, 0.87);
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.87);
+    vertical-align: bottom;
+    cursor: pointer;
+  }
 }
 
 .oneRampIsYou {
